HT add messages on dialiog

--- a/src/components/Dialogs/Dialogmessages/Dialogmessages.module.css
+++ b/src/components/Dialogs/Dialogmessages/Dialogmessages.module.css
@@ -1,9 +1,46 @@
 
-p {
+.dialog_text {
     margin-top: 0;
     margin-bottom: 0;
+    color: rgb(15, 102, 102);
 }
 
 ul {
     list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+.author_photo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    flex-shrink: 0;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.item {
+    display: flex;
+    padding-bottom: 15px;
+    background-color: rgb(238, 255, 253);
+    border-radius: 6px;
+    padding-top: 15px;
+}
+
+.item:nth-child(odd) .dialog_text {
+    margin-left: 10px;
+}
+.item:nth-child(even) .dialog_text {
+    margin-right: 10px;
+}
+.item:nth-child(odd) {
+    flex-direction: row-reverse;
+}
+
+.item:not(:last-child) {
+    margin-bottom: 15px;
 }
