--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,13 @@
-.navigation {
-  flex-basis: 24%;
+.navigation ,
+.best_friends {
   padding: 10px 15px;
-  background-color: #f6f6ff;
+  background-color: #ebeffd;
   border-radius: 6px;
   align-self: flex-start;
+  margin-bottom: 15px;
+}
+aside {
+  flex-basis: 24%;
 }
 
 .item a {
@@ -17,4 +21,15 @@
 .item a.active {
   color: #1caa0f;
   padding-left: 10px;
+}
+
+.friends_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.title_friend {
+  margin-top: 0;
+  margin-bottom: 5px;
 }
